<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fmsirvent.experimentalarchitecturemarvel.view.MainActivity"
    android:background="@android:color/darker_gray">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/introduction"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/introduction"
        android:gravity="center"/>

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/favourite_characters" />

    <FrameLayout
        android:id="@+id/characters_parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:visibility="gone"
        android:layout_above="@+id/favourite_characters"
        android:background="@android:color/holo_green_dark">
        <FrameLayout
            android:id="@+id/characters"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/add_character"
        android:layout_width="@dimen/character_view_size"
        android:layout_height="@dimen/character_view_size"
        android:layout_alignParentBottom="true"
        android:background="@drawable/circle_background"
        android:backgroundTint="@android:color/holo_red_dark"
        android:src="@drawable/ic_character_add"
        android:layout_margin="@dimen/half_margin"/>

    <FrameLayout
        android:id="@id/favourite_characters"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/add_character" />
</RelativeLayout>
