<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/comic_thumbnail"
        android:layout_width="@dimen/comic_thumb_width"
        android:layout_height="@dimen/comic_thumb_height"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/basic_margin"/>

</FrameLayout>